# mml-composemusic-mcp

./: .gitignore  README.md  pyproject.toml
doc/: Design.md  Design_err.md  Design_mml.md  Desing.md  MML_BNF.md  mcp.md
plans/: trademark-replacement-plan.md
samples/: README.md
samples/ppmck/: output.mml
samples/pyxel/: output.mml
src/mml_composemusic_mcp/: ast_nodes.py  ir.py  lexer.py  parser_base.py  parser_ppmck.py  parser_pyxel.py  semantic_base.py  semantic_ppmck.py  semantic_pyxel.py  server.py  synthesizer.py  templates.py
tests/: conftest.py  test_compose_mml_tool.py  test_error_codes.py  test_lexer.py  test_mml_conformance.py  test_parser.py  test_parser_detailed.py  test_sample.py  test_server.py  test_synthesizer.py  test_synthesizer_pitch.py  test_templates.py  test_transports.py
