[project]
name = "mml-composemusic-mcp"
version = "0.2.0"
description = "MCP server for LLM-driven retro chiptune-style MML composition"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.1.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mml_composemusic_mcp"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]


[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
mml-composemusic-mcp = "mml_composemusic_mcp.server:main"
